Fix some rendering issue on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -120,8 +120,8 @@ hr {
 }
 
 .hero__button-quickstart-svg, .hero__button-github-svg {
-  width: 32px;
-  height: 32px;
+  width: 27px;
+  height: 27px;
   display: inline-block;
   vertical-align: middle;
   margin-left: 15px;
