--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -11,7 +11,7 @@
 
 @media screen and (max-width: 966px) {
   .heroBanner {
-    padding: 1.5rem 2rem;
+    padding: 2rem 2rem 1.5rem 2rem;
   }
 }
 
